Downgrade to java 21 to create fat jar