@@ -9,7 +9,7 @@
     <version>0.3.0</version>
 
     <properties>
-        <java.version>23</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.1</junit.version>
         <picocli.version>4.7.6</picocli.version>
@@ -93,9 +93,7 @@
                 <version>3.13.0</version>
                 <configuration>
                 <compilerArgument>-Xlint:all</compilerArgument><!-- -Werror -->
-                <compilerArgument>--enable-preview</compilerArgument>
                 <release>${java.version}</release>
-                <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
